--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@oclif/errors": "^1",
     "@salesforce/command": "^1.4.1",
     "@salesforce/core": "^1.3.2",
+    "@slack/webhook": "^5.0.0",
     "@types/twilio": "0.0.10",
     "tslib": "^1",
     "twilio": "^3.30.0"
